--- a/TrafficSignClassifier.ipynb
+++ b/TrafficSignClassifier.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aashish Pandey, Umesh Jaishwal\n",
+    "# Aashish Pandey, Umesh Jaiswal\n",
     "## Deep Learning - CSCE 5218 (Spring 2021)\n",
     "## Traffic Sign Recognition\n"
    ]
